// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > accepts id prop 1`] = `
<div>
  <button
    class="px-6 py-2 rounded-lg _button_81a49d "
    id="my-button"
  >
    ID Test
  </button>
</div>
`;

exports[`Button > accepts type prop 1`] = `
<div>
  <button
    class="px-6 py-2 rounded-lg _button_81a49d "
    type="submit"
  >
    Submit
  </button>
</div>
`;

exports[`Button > applies additional className 1`] = `
<div>
  <button
    class="px-6 py-2 rounded-lg _button_81a49d extra-class"
  >
    Test
  </button>
</div>
`;

exports[`Button > handles multiple classNames correctly 1`] = `
<div>
  <button
    class="px-6 py-2 rounded-lg _button_81a49d first second"
  >
    Classes
  </button>
</div>
`;

exports[`Button > is disabled when disabled prop is true 1`] = `
<div>
  <button
    class="px-6 py-2 rounded-lg _button_81a49d "
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`Button > renders children 1`] = `
<div>
  <button
    class="px-6 py-2 rounded-lg _button_81a49d "
  >
    Click me
  </button>
</div>
`;
